Deep rewrite of Loom and Panama topic documents
by-topic/core/loom/index.md (437 → 1164 lines):
- Added virtual thread internals: Continuation freeze/thaw, StackChunk,
  v-stack/h-stack, 19-state VirtualThread state machine
- Added ForkJoinPool scheduler details: work-stealing, compensation,
  system properties (parallelism/maxPoolSize/minRunnable)
- Added JEP 491 deep dive: LockStack migration, new monitor states,
  Object.wait() unmounting, remaining pinning scenarios
- Added Scoped Values analysis: vs ThreadLocal (8 dimensions),
  memory model, StructuredTaskScope inheritance
- Added benchmarks: Spring Boot ~2.5x throughput, Helidon 3-4x,
  with source attribution
- Added ecosystem adoption: Spring Boot 4, Quarkus, Helidon 4, JDBC
- Added 6 anti-patterns with code examples

by-topic/core/panama/index.md (657 → 1003 lines):
- Added FFM API evolution (JEP 370→454, 9 iterations with key changes)
- Added core API deep dive: Arena, MemorySegment, MemoryLayout,
  Linker, SymbolLookup, FunctionDescriptor
- Added native call examples: strlen, printf, upcalls, structs
- Added jextract tool usage
- Added JNI vs FFM detailed comparison
- Added real-world examples: libcurl, SQLite, OpenSSL
- Added JEP 472 JNI restriction roadmap

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>